<resources>
    <string name="app_name">Petland</string>
    <string name="home_text_tittle">Don’t buy it. Adopt it.</string>
    <string name="home_text">PetLand is a platform where you can adopt pets or help them get a new family.</string>
    <string name="signin_google">Sign in with Google</string>
    <string name="client_id">626832051163-k77a5fp4vmdgkuf6p4t6adoajqc03kem.apps.googleusercontent.com</string>
    <string name="server">http://10.0.0.86:4000</string>
    <string name="tittle_choose_option">What do you want to do?</string>
    <string name="Adopt_Cat_Card_Tittle">Adopt a cat</string>
    <string name="Adopt_Dog_Card_Tittle">Adopt a dog</string>
    <string name="Submit_Pet_Card_Tittle">Help a pet be adopted</string>
    <string name="Friendlist_Card_tittle">My Friendlist</string>
    <string name="file_name">Choose a photo of the pet</string>
    <string name="pet_name">Name:</string>
    <string name="pet_address">Address:</string>
    <string name="pet_city">City:</string>
    <string name="pet_state">State:</string>
    <string name="pet_age">Age:</string>
    <string name="pet_medical_condition">Medical Condition:</string>
    <string name="donation_form_check_box">I agree that I cannot sell any animals on this platform.</string>
    <string name="pet_type_1">Cat</string>
    <string name="pet_type_2">Dog</string>
    <string name="submit_form_btn">Submit</string>
    <string name="cancel_form_btn">Cancel</string>
    <string name="Request_pet_list">Request Pet List</string>
    <string name="bottoAccept"> Accept</string>
    <string name="bottonReject"> Reject </string>
    <string name="request_adopt"> Request Adopt</string>
    <string name="view_location">View pet location on map</string>

    <string-array name="pet_medical_condition_options">
        <item>Healthy</item>
        <item>Unhealthy</item>
        <item>Needs Medical Appointment eventually</item>
        <item>Needs Medical Appointment urgently</item>
    </string-array>

    <string-array name="pet_age_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="pets_adopted">Pets Adopted</string>
    <string name="pets_donated">Pets Donated</string>
    <string name="no_pets">No Pets Adopted or Donated Yet :-(</string>
    <string name="no_pets_description">Once you adopted or donated a pet they will appear here.</string>

    <string name="following_user">Unfollow</string>
    <string name="not_following_user">Follow</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>