<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:fresco="http://schemas.android.com/tools"
    tools:context=".AdoptionForm"
    android:background="@color/primaryColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/secondaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:textColor="@color/black"
                android:id="@+id/project_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="10pt"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/profile_image"
                app:roundAsCircle="true"
                fresco:roundingBorderWidth="1dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.847"
                app:layout_constraintStart_toEndOf="@+id/project_tittle"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/pet_photo_container"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="40dp"
            android:background="#E6E6E6"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/pet_photo_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_name"
                android:textColor="@color/black"
                android:textSize="10pt" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/formContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_name"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    tools:layout_editor_absoluteX="41dp"
                    tools:layout_editor_absoluteY="467dp" />

                <EditText
                    android:id="@+id/pet_name"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:autofillHints="name"
                    android:inputType="text"
                    android:labelFor="@+id/pet_name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_state"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    tools:layout_editor_absoluteX="41dp"
                    tools:layout_editor_absoluteY="467dp" />

                <Spinner
                    android:id="@+id/spinner_State"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_city"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    tools:layout_editor_absoluteX="41dp"
                    tools:layout_editor_absoluteY="467dp" />

                <Spinner
                    android:id="@+id/spinner_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_age"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    tools:layout_editor_absoluteX="41dp"
                    tools:layout_editor_absoluteY="467dp" />

                <Spinner
                    android:id="@+id/spinner_pet_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_medical_condition"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    tools:layout_editor_absoluteX="41dp"
                    tools:layout_editor_absoluteY="467dp" />

                <Spinner
                    android:id="@+id/spinner_pet_medical_condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"/>
            </LinearLayout>

            <RadioGroup
                android:id="@+id/pet_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/pet_type_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_type_1"
                    android:textColor="@color/black"
                    android:textSize="8pt"/>
                <RadioButton
                    android:id="@+id/pet_type_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_type_2"
                    android:textColor="@color/black"
                    android:textSize="8pt"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <Button
                android:layout_margin="20dp"
                android:id="@+id/submit_form_btn"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/primary_btn_color"
                android:text="@string/submit_form_btn"
                android:textColor="@color/black"
                android:textSize="8pt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/formContainer" />
            <Button
                android:layout_margin="20dp"
                android:id="@+id/cancel_form_btn"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/secondary_btn_color"
                android:text="@string/cancel_form_btn"
                android:textColor="@color/black"
                android:textSize="8pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/submit_form_btn"
                app:layout_constraintTop_toBottomOf="@+id/formContainer" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>