<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdoptResearch"
    android:background="@color/primaryColor">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintPetLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/secondaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:textColor="@color/black"
                android:id="@+id/project_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="10pt"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/profile_ima"
                app:roundAsCircle="true"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.847"
                app:layout_constraintStart_toEndOf="@+id/project_tittle"
                app:layout_constraintTop_toTopOf="parent" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/profile_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.847"
                app:layout_constraintStart_toEndOf="@+id/project_tittle"
                app:layout_constraintTop_toTopOf="parent"
                app:roundAsCircle="true" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Filter_title"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <androidx.cardview.widget.CardView
            android:id="@+id/adoptCard"
            style="@style/CustomCardView"
            android:layout_width="240dp"
            android:layout_height="353dp"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/pet_photo"
                android:layout_width="match_parent"
                android:layout_height="160dp" />
            <TextView
                android:id="@+id/pet_name"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_name"
                android:textSize="6pt"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="200dp"/>
            <TextView
                android:id="@+id/pet_age"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_age"
                android:textSize="6pt"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="230dp"/>
            <TextView
                android:id="@+id/pet_city"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_city"
                android:textSize="6pt"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="260dp"/>
            <TextView
                android:id="@+id/pet_medical_condition"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_medical_condition"
                android:textSize="6pt"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="290dp"/>

        </androidx.cardview.widget.CardView>

        <ListView
            android:background="#98D4C4"
            app:layout_constraintHorizontal_bias="0.497"
            app:cardCornerRadius="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/allPetsListView"/>


    </LinearLayout>

</ScrollView>