<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/secondaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/project_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="10pt"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.847"
                app:layout_constraintStart_toEndOf="@+id/project_tittle"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="70dp"
            android:text="@string/tittle_choose_option"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <androidx.cardview.widget.CardView
            android:id="@+id/adoptCatCard"
            style="@style/CustomCardView"
            android:layout_width="240dp"
            android:layout_height="353dp"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="90dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/adopt_cat_icon"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                app:layout_constraintHorizontal_bias="0.847"
                app:layout_constraintStart_toEndOf="@+id/project_tittle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Adopt_Cat_Card_Tittle"
                android:textSize="12pt"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="280dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/adoptDogCard"
            style="@style/CustomCardView"
            android:layout_width="240dp"
            android:layout_height="353dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="90dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adoptCatCard">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/adopt_dog_icon"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                app:layout_constraintHorizontal_bias="0.847"
                app:layout_constraintStart_toEndOf="@+id/project_tittle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Adopt_Dog_Card_Tittle"
                android:textSize="12pt"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="280dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/submitPetCard"
            style="@style/CustomCardView"
            android:layout_width="240dp"
            android:layout_height="353dp"
            android:layout_marginTop="68dp"
            android:layout_marginLeft="90dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adoptDogCard">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/submit_pet_icon"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                app:layout_constraintHorizontal_bias="0.847"
                app:layout_constraintStart_toEndOf="@+id/project_tittle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Submit_Pet_Card_Tittle"
                android:textAlignment="center"
                android:textSize="12pt"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="250dp"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</ScrollView>